test/oscar/compiler/errors/initValueMismatch.oscar
def main() => unit = {
  int x = 1.0;
}